--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -21,12 +21,12 @@
   flex-wrap: wrap;
 }
 
-.date-title{
-    grid-column: 2 / span 1;
-    grid-row: 1;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.date-title {
+  grid-column: 2 / span 1;
+  grid-row: 1;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
 .day {
@@ -38,13 +38,13 @@
   background-color: white;
   display: grid;
   grid-template-columns: 10% 80% 10%;
-  grid-template-rows: 10% 80% 10%;
+  grid-template-rows: 20% 70% 10%;
 }
 
 .events {
-    grid-column: 2;
-    grid-row: 2;
-    height: 100%;
+  grid-column: 2;
+  grid-row: 2;
+  height: 100%;
   overflow: scroll;
 }
 
@@ -60,8 +60,18 @@
   background-color: rgb(199, 199, 199);
 }
 
+.addEventBtn {
+  border: none;
+  /* border-radius: 5px; */
+  height: 30px;
+  width: 30px;
+}
 
-#close-popup{
-    align-self: flex-end;
-    width: 40px;
+#close-popup {
+  align-self: flex-end;
+  width: 40px;
+}
+
+button:focus {
+  outline: none;
 }
