--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -75,3 +75,20 @@
 button:focus {
   outline: none;
 }
+
+.eventInfo {
+  z-index: 10;
+  grid-column: 3;
+  grid-row: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 200px;
+  width: 300px;
+  background-color: rgb(199, 199, 199);
+}
+
+
+.eventTitle{
+    cursor: pointer;
+}
