--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -41,12 +41,19 @@
   grid-template-rows: 20% 70% 10%;
 }
 
-.events {
-  grid-column: 2;
+.day p {
+    font-size: 12px;
+    text-align: start;
+  padding-top: 5px;
+  padding-left: 5px;
+  margin: 0;
+  grid-column: 1 / span 3;
   grid-row: 2;
   height: 100%;
   overflow: scroll;
 }
+
+
 
 .addEventPopup {
   z-index: 10;
@@ -88,7 +95,6 @@ button:focus {
   background-color: rgb(199, 199, 199);
 }
 
-
-.eventTitle{
-    cursor: pointer;
+.eventTitle {
+  cursor: pointer;
 }
