--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -42,8 +42,9 @@
 }
 
 .day p {
-    font-size: 12px;
-    text-align: start;
+  line-height: 12px;
+  font-size: 12px;
+  text-align: start;
   padding-top: 5px;
   padding-left: 5px;
   margin: 0;
@@ -52,8 +53,6 @@
   height: 100%;
   overflow: scroll;
 }
-
-
 
 .addEventPopup {
   z-index: 10;
@@ -83,18 +82,29 @@ button:focus {
   outline: none;
 }
 
-.eventInfo {
+.eventPopup {
+    padding: 10px;
   z-index: 10;
   grid-column: 3;
   grid-row: 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: flex-start;
   height: 200px;
   width: 300px;
   background-color: rgb(199, 199, 199);
 }
 
+.eventInfo {
+  font-size: 13px;
+  text-align: start;
+}
+
 .eventTitle {
   cursor: pointer;
+}
+
+.eventMadeBy {
+  font-size: 10px;
 }
