--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -1,18 +1,28 @@
 :root {
   background-color: black;
 }
-#root {
+/* #root {
   height: 100vh;
   background-color: rgb(71, 71, 71);
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+
+.month-title{
+    text-align: left;
+    margin-bottom: 40px;
 }
 
 .page {
-  width: 900px;
-  height: 90vh;
-  border: 1px solid brown;
+  color: rgba(255, 255, 255, 0.788);
+  font-family: "mytype";
+  font-weight: 100;
+  align-self: center;
+  padding-left: 4%;
+  width: 1000px;
+  height: 100%;
+  /* border: 1px solid brown; */
 }
 
 .dates {
@@ -21,24 +31,26 @@
   flex-wrap: wrap;
 }
 
+.day {
+  border: 1px solid rgb(0, 0, 0);
+  border-radius: 5px;
+  box-shadow: 2px 2px 5px #6b586b, -2px -2px 5px #6b586b;
+  height: 100px;
+  width: 123px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  background-color: rgba(0, 0, 0, 0.651);
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: 30% 70%;
+}
+
 .date-title {
   grid-column: 2 / span 1;
   grid-row: 1;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-}
-
-.day {
-  border: 1px solid rgb(0, 0, 0);
-  height: 100px;
-  width: 123px;
-  margin-right: 5px;
-  margin-bottom: 5px;
-  background-color: white;
-  display: grid;
-  grid-template-columns: 10% 80% 10%;
-  grid-template-rows: 20% 70% 10%;
+  justify-content: space-between;
 }
 
 .day p {
@@ -60,30 +72,23 @@
   grid-row: 2;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-around;
+  padding: 10px;
   height: 200px;
   width: 300px;
-  background-color: rgb(199, 199, 199);
+  border: 1px solid #6b586bde;
+  border-radius: 5px;
+  background-color: #1a1718ef;
 }
 
-.addEventBtn {
-  border: none;
-  /* border-radius: 5px; */
-  height: 30px;
-  width: 30px;
-}
 
-#close-popup {
-  align-self: flex-end;
-  width: 40px;
-}
 
 button:focus {
   outline: none;
 }
 
 .eventPopup {
-    padding: 10px;
+  padding: 10px;
   z-index: 10;
   grid-column: 3;
   grid-row: 2;
@@ -93,7 +98,9 @@ button:focus {
   align-items: flex-start;
   height: 200px;
   width: 300px;
-  background-color: rgb(199, 199, 199);
+  border: 1px solid #6b586bde;
+  border-radius: 5px;
+  background-color: #1a1718ef;
 }
 
 .eventInfo {
@@ -107,4 +114,17 @@ button:focus {
 
 .eventMadeBy {
   font-size: 10px;
+}
+
+.icon {
+  margin-top: 5px;
+  cursor: pointer;
+  -webkit-filter: brightness(0.8);
+  height: 15px;
+  width: 15px;
+}
+
+@font-face {
+  font-family: "mytype";
+  src: url("./rough_typewriter.otf") format("truetype");
 }
