--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -1,15 +1,60 @@
-.navbar {
-    /* margin-top: 150px; */
-    /* position: fixed !important; */
-    display: flex;
-    justify-content: center;
-    background-color: rgba(0, 0, 0, 0.404);
-    width: 20vw;
-    height: 100vh;
-    /* justify-self: left; */
+#navigation {
+  color: white;
+  font-family: "mytype";
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 30% 70%;
+  background-color: rgba(0, 0, 0, 0.404);
+  width: 20vw;
+  height: 100vh;
 }
 
-.error-warning{
-    background-color: red;
+.title {
+  grid-row: 1;
 }
 
+.login-register {
+  grid-row: 2;
+  align-self: flex-start;
+}
+
+.navbar-brand{
+  grid-row: 2;
+  align-self: flex-start;
+}
+
+.logout-btn{
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(201, 201, 201, 0.397);
+}
+
+.nav-tabs .nav-link{
+    color: rgb(73, 81, 92) !important;
+    background-color: rgba(0, 0, 0, 0.568);
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    color: rgb(165, 184, 211) !important;
+background-color: rgba(19, 19, 19, 0.726) !important;
+}
+
+.btn{
+    color: rgb(165, 184, 211) !important;
+    border: none !important;
+}
+
+.btn:hover{
+-webkit-filter: brightness(1.3);
+}
+
+
+
+.error-warning {
+  background-color: red;
+}
+
+@font-face {
+  font-family: "mytype";
+  src: url("./rough_typewriter.otf") format("truetype");
+}
