--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -48,7 +48,9 @@ background-color: rgba(19, 19, 19, 0.726) !important;
 -webkit-filter: brightness(1.3);
 }
 
-
+input{
+    background-color: rgba(160, 160, 160, 0.068) !important;
+}
 
 .error-warning {
   background-color: red;
