--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -22,7 +22,6 @@
   padding-left: 4%;
   width: 1000px;
   height: 100%;
-  /* border: 1px solid brown; */
 }
 
 .dates {
@@ -78,24 +77,35 @@
   grid-row: 2;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 10px;
+  padding-bottom: 20px;
   height: max-content;
-  width: 300px;
+  width: max-content;
   border: 1px solid #6b586bde;
   border-radius: 5px;
   background-color: #1a1718ef;
 }
-
-.form-group{
-    display: flex;
-    flex-direction: row;
+button, input, optgroup, select, textarea{
+    color: white;
 }
 
-select{
-    color: rgba(255, 255, 255, 0.884) !important;
-    background-color: rgba(0, 0, 0, 0) !important;
-    width: 50px !important;
+.addbtn{
+    background-color: rgba(255, 255, 255, 0.829);
+    color: black !important;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: row;
+}
+
+select {
+  font-size: 13px !important;
+  color: rgba(255, 255, 255, 0.884) !important;
+  background-color: rgba(0, 0, 0, 0) !important;
+  width: 40px !important;
+  height: 25px !important;
 }
 
 button:focus {
