--- a/src/style/nav.css
+++ b/src/style/nav.css
@@ -18,38 +18,39 @@
   align-self: flex-start;
 }
 
-.navbar-brand{
+.navbar-brand {
   grid-row: 2;
   align-self: flex-start;
 }
 
-.logout-btn{
-    border: none;
-    border-radius: 5px;
-    background-color: rgba(201, 201, 201, 0.397);
+.logout-btn {
+  border: none;
+  border-radius: 5px;
+  background-color: rgba(201, 201, 201, 0.397);
 }
 
-.nav-tabs .nav-link{
-    color: rgb(73, 81, 92) !important;
-    background-color: rgba(0, 0, 0, 0.568);
+.nav-tabs .nav-link {
+  color: rgb(73, 81, 92) !important;
+  background-color: rgba(0, 0, 0, 0.568);
 }
 
-.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
-    color: rgb(165, 184, 211) !important;
-background-color: rgba(19, 19, 19, 0.726) !important;
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+  color: rgb(165, 184, 211) !important;
+  background-color: rgba(19, 19, 19, 0.726) !important;
 }
 
-.btn{
-    color: rgb(165, 184, 211) !important;
-    border: none !important;
+.btn {
+  color: rgb(165, 184, 211) !important;
+  border: none !important;
 }
 
-.btn:hover{
--webkit-filter: brightness(1.3);
+.btn:hover {
+  -webkit-filter: brightness(1.3);
 }
 
-input{
-    background-color: rgba(160, 160, 160, 0.068) !important;
+input {
+  background-color: rgba(160, 160, 160, 0.068) !important;
 }
 
 .error-warning {
